<resources>
    <string name="app_name">Runner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_text">Password</string>
    <string name="email_or_phone_text">Email or Phone</string>
    <string name="sign_in_text">Sign In</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="dont_have_account_text">Don\'t have an account?</string>
    <string name="signup_text"> SignUp</string>
    <string name="dashboard_text">Dashboard</string>
    <string name="map_text">Map</string>
    <string name="task_text">Task</string>
    <string name="chat_text">Chat</string>
    <string name="google_maps_key">AIzaSyCJ_f86aOafSUq4LmqJmKi5MZKkywxa1ho</string>
</resources>
