<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth_module.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lets Start with"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="@font/worksans_regular" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="Login!"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="@font/worksans_regular" />
    </LinearLayout>

    <include layout="@layout/auth_background_layout" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen_25dp"
        app:cardCornerRadius="@dimen/dimen_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_40dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/email_or_phone_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_account_box_black_24dp"
                    android:drawableLeft="@drawable/ic_account_box_black_24dp"
                    android:drawablePadding="@dimen/dimen_10dp"
                    app:fontFamily="@font/worksans_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:divider="@color/colorBlack"
                android:hint="@string/password_text"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_key_black_24dp"
                    android:drawableLeft="@drawable/ic_key_black_24dp"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:inputType="textPassword"
                    app:fontFamily="@font/worksans_regular" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@color/colorAccent"
                android:padding="@dimen/dimen_16dp"
                android:text="@string/sign_in_text"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/dimen_4dp"
                app:fontFamily="@font/worksans_regular" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginTop="@dimen/dimen_25dp"
                android:fontFamily="@font/worksans_regular"
                android:text="@string/forgot_password_text"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/dimen_25dp"
        android:layout_marginRight="@dimen/dimen_25dp"
        android:background="@drawable/signup_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_20dp">

        <TextView
            android:layout_marginRight="@dimen/dimen_5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/worksans_regular"
            android:text="@string/dont_have_account_text"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/worksans_regular"
            android:text="@string/signup_text"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>